--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -31,7 +31,6 @@
         <h4 class="my-0 mr-md-auto font-weight-normal">
           <a href="/" class="text-white">OurApp</a>
         </h4>
-
         <% if (user) { %>
         <div class="flex-row my-3 my-md-0">
           <a
@@ -49,7 +48,7 @@
             data-placement="bottom"
             ><i class="fas fa-comment"></i
           ></span>
-          <a href="#" class="mr-2"
+          <a href="/profile/<%= user.username %>" class="mr-2"
             ><img
               title="My Profile"
               data-toggle="tooltip"
