--- a/views/edit-post.ejs
+++ b/views/edit-post.ejs
@@ -4,7 +4,11 @@
 <div class="container py-md-5 container--narrow">
   <%- include('includes/flash') %>
 
-  <form action="/create-post" method="POST">
+  <a class="small font-weight-bold" href="/post/<%= post._id %>"
+    >&laquo; Back to post permalink</a
+  >
+
+  <form class="mt-3" action="/post/<%= post._id %>/edit" method="POST">
     <div class="form-group">
       <label for="post-title" class="text-muted mb-1"
         ><small>Title</small></label
@@ -15,6 +19,7 @@
         id="post-title"
         class="form-control form-control-lg form-control-title"
         type="text"
+        value="<%= post.title %>"
         placeholder=""
         autocomplete="off"
       />
@@ -30,7 +35,9 @@
         id="post-body"
         class="body-content tall-textarea form-control"
         type="text"
-      ></textarea>
+      >
+<%= post.body %></textarea
+      >
     </div>
 
     <button class="btn btn-primary">Save New Post</button>
