--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -16,7 +16,11 @@
         title="Edit"
         ><i class="fas fa-edit"></i
       ></a>
-      <form class="delete-post-form d-inline" action="#" method="POST">
+      <form
+        class="delete-post-form d-inline"
+        action="/post/<%= post._id %>/delete"
+        method="POST"
+      >
         <button
           class="delete-post-button text-danger"
           data-toggle="tooltip"
@@ -31,10 +35,15 @@
   </div>
 
   <p class="text-muted small mb-4">
-    <a href="#"><img class="avatar-tiny" src="<%= post.author.avatar %>"/></a>
-    Posted by <a href="#"><%= post.author.username %></a> on <%=
-    post.createdDate.getMonth()+1 %>/<%= post.createdDate.getDate() %>/<%=
-    post.createdDate.getFullYear() %>
+    <a href="/profile/<%= post.author.username %>"
+      ><img class="avatar-tiny" src="<%= post.author.avatar %>"
+    /></a>
+    Posted by
+    <a href="/profile/<%= post.author.username %>"
+      ><%= post.author.username %></a
+    >
+    on <%= post.createdDate.getMonth()+1 %>/<%= post.createdDate.getDate()
+    %>/<%= post.createdDate.getFullYear() %>
   </p>
 
   <div class="body-content">
